Css correction for alignment in footer

--- a/assets/css/sass/modules/_footer.scss
+++ b/assets/css/sass/modules/_footer.scss
@@ -4,6 +4,7 @@
     .container {
         display: flex;
         justify-content: space-around;
+        align-items: flex-end;
 
         & > div {
             padding: 20px;
